deleteService, getServicesList
